corrected DB access, added POST requests, adapted API specificatin
